--- a/index.html
+++ b/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>메리크리스마스</title>
 </head>
+
 <body>
     <div>
         <h1>
             팀 소개 페이지 만들기
             <ul></ul>
-            <h3>소개 페이지 설명서 </h3>
+            <p>소개 페이지 설명서</p>
         </h1>
-        
+
         <h2>
             1. 팀 설명 <ul></ul>
             <h3>
                 - 팀명 : 메리크리스마스 <ul></ul>
-            - 팀원 : 정찬오, 김강민 <ul></ul>
+                - 팀원 : 정찬오, 김강민 <ul></ul>
             </h3>
-            
-        </h2> 
+
+        </h2>
+        <h2>
+            2. 팀 프로젝트 <ul></ul>
+            <h3>
+                - 프로젝트 명 : 메리크리스마스 <ul></ul>
+                - 해결할 문제 : 크리스마스에 무엇을 할 것 인가? <ul></ul>
+                - 기능 명세<ul></ul>
+                1. 장소 섭외 <ul></ul>
+                2. 식사 메뉴 선정 <ul></ul>
+                3. 활동 기획 <ul></ul>
+            </h3>
+
+        </h2>
     </div>
 
 
 </body>
+
 </html>
